<resources>
    <string name="app_name">IdeaInk</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="main">Main</string>
    <string name="profile">Profile</string>
    <string name="author">Author</string>
    <string name="write_your_content_here">Write your content here...</string>
    <string name="post_title_here">Post Title Here...</string>
    <string name="template">Template</string>
    <string name="selamat_datang_user">Selamat Datang User</string>
    <string name="note">Note</string>
    <string name="finance">Finance</string>
    <string name="memo">Memo</string>
    <string name="extra">Extra</string>
    <string name="recent">Recent</string>
    <string name="recent_1">Recent 1</string>
    <string name="recent_2">Recent 2</string>
    <string name="recent_3">Recent 3</string>
    <string name="recent_4">Recent 4</string>
    <string name="tulis_disini">Tulis Disini</string>
    <string name="judul">Judul</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


<!--Profile-->
    <string name="quote">Quote</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="isi">Fill Data</string>
    <string name="change">Update</string>
    <string name="dummy_name">aaa</string>
    <string name="dummy_email">aaa@aaa.com</string>
    <string name="dummy_bio">aaa</string>
    <string name="image">Profile Photo</string>
</resources>