<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.profile.ProfileFragment"
    android:background="#E3E1D9">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/tv_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:shapeAppearanceOverlay="@style/circular"
        android:layout_marginBottom="40dp"
        android:src="@drawable/user"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:text="@string/name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/dummy_name" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:text="@string/email" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/dummy_email" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:text="@string/quote" />
    <TextView
        android:id="@+id/tv_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:text="@string/dummy_bio" />
    <Button
        android:id="@+id/btn_save"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/isi" />
</LinearLayout>