<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262626"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selamat Datang"
            android:textSize="20sp"
            android:layout_margin="16dp"
            android:textColor="@android:color/white"
            android:background="#262626"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#262626"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/template"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="16dp">

                        <ImageView
                            android:id="@+id/noteTemplate"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/baseline_notes_24" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/note"
                            android:textColor="@android:color/white"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="16dp">

                        <ImageView
                            android:id="@+id/financeTemplate"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/baseline_finance_24"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/finance"
                            android:textColor="@android:color/white"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="16dp">

                        <ImageView
                            android:id="@+id/memoTemplate"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/baseline_sticky_note_2_24"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/memo"
                            android:textColor="@android:color/white"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="16dp">

                        <ImageView
                            android:id="@+id/todoTemplate"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/baseline_format_list_bulleted_24"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ToDOList"
                            android:textColor="@android:color/white"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"/>
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="469dp"
            android:layout_marginTop="16dp"
            android:background="#E3E1D9"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/recentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="16dp"
                    android:text="@string/recent"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
